examples/test/testpolicy7056.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7056
  namespace: namespace482
spec:
  podSelector:
    matchLabels:
      key4: value6
      key32: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value1
          key46: value16
      podSelector:
        matchLabels:
          key38: value9
          key11: value0
          key34: value23
